--- a/configs/panoptic_deeplab_MBNV2_100_os32_cityscapes_bs16_lr_x2.yaml
+++ b/configs/panoptic_deeplab_MBNV2_100_os32_cityscapes_bs16_lr_x2.yaml
@@ -76,5 +76,5 @@ POST_PROCESSING:
   TOP_K_INSTANCE: 200
   STUFF_AREA: 2048
 OUTPUT_DIR: "./output/panoptic_deeplab_MBNV2_100_os32_cityscapes_bs16_lr_x2"
-GPUS: (0, 1, 2, 3, 4, 5, 6, 7)
+GPUS: (0,)  # (0, 1, 2, 3, 4, 5, 6, 7)
 WORKERS: 1
