Feat: plot class labels at predicted centerpoints
Change-Id: I1e562a1b9ac6db6edccae821eca855062ff1b632

--- a/configs/panoptic_deeplab_MBNV2_100_os32_cityscapes_bs16_lr_x2.yaml
+++ b/configs/panoptic_deeplab_MBNV2_100_os32_cityscapes_bs16_lr_x2.yaml
@@ -68,6 +68,7 @@ DEBUG:
   DEBUG: True
   DEBUG_FREQ: 100
 TEST:
+  MODEL_FILE: "model_zoo/panoptic_deeplab_MBNV2_100_os32_cityscapes_bs16_lr_x2.pth"
   EVAL_INSTANCE: True
   EVAL_PANOPTIC: True
 POST_PROCESSING:
